@@ -42,7 +42,7 @@ module Padrino
         content, open_tag = options.delete(:content), options.delete(:open)
         content = content.join("\n") if content.respond_to?(:join)
         identity_tag_attributes.each { |attr| options[attr] = attr.to_s if options[attr]  }
-        html_attrs = options.collect { |a, v| v.nil? ? nil : "#{a}=\"#{v}\"" }.compact.join(" ")
+        html_attrs = options.collect { |a, v| v.nil? || v == false ? nil : "#{a}=\"#{v}\"" }.compact.join(" ")
         base_tag = (html_attrs.present? ? "<#{name} #{html_attrs}" : "<#{name}")
         base_tag << (open_tag ? ">" : (content ? ">#{content}</#{name}>" : " />"))
       end
