@@ -2,6 +2,10 @@
 
 == 0.9.5 (Unreleased)
 
+* Fixed check_box helper when :checked => false we remove them
+* Added auto template lookup with locale and format i.e: show.ru.js.erb or show.js.erb or show.en.erb
+* Css refactoring and fixed an unused css in Padrino Admin generator
+* Fixed ar:structure:dump and others tasks that don't use symbols
 * Fixed compatibility with ERB and Sinatra 1.0
 * Fixed an issues with index and ar:auto:upgrade
 * Now we use Sinatra 0.9.6 since previous versions on ruby >= 1.8.7-p248 raise a segfault bug
